# attic

./: .gitignore  LICENCE  README.md  run.py  run_attic.py  run_attic.sh  run_hyattic.sh  run_windows.ps1  setup.cfg  setup.py  setup.sh  setup_linux_folders.sh
config/: config.yaml  config_linux.yaml  config_windows.yaml
notebooks/: 01_dev.ipynb  01_dev_windows.ipynb
scripts/: setup-dev.sh
src/: .aiderignore  .gitignore  attic.service  config.yaml  install_service.sh  requirements.txt  setup.sh
src/attic/: __init__.py
src/hyattic/: __init__.py  perma_storage.py  safetimestring.py
src/hyattic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_basic.py
tools/: attic_performance_ui.py  mqtt_counter.py
