[metatata]
description = Attic is a mqtt based data logger
long-description = file: doc/README.md
keywords = MQTT
license = MIT
classifiers =
    Programming Language :: Python :: 3.12

url = https://rey.wiki
author = George Rey

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8

install_requires =
    attrs
    numpy
    pyyaml
    pytest
    jupyter
    numpy
    pandas
    matplotlib
    gradio
    paho-mqtt

[options.entry_points]
console_scripts =
    attic = attic:main